# Modern-Qt-Application-Development

./: .clang-format  .clang-tidy  .cppcheck-suppressions  .pre-commit-config.yaml  CPPLINT.cfg  README.md  add_license_blurb.sh  check.sh
ch02/example21/: CMakeLists.txt  main.cpp
ch02/example22/: CMakeLists.txt  car.cpp  car.h  main.cpp
ch02/example23/: CMakeLists.txt  main.cpp  main.qrc  myapplication.cpp  myapplication.h  myevent.cpp  myevent.h  myeventfilter.cpp  myeventfilter.h  mylabel.cpp  mylabel.h  mylineedit.cpp  mylineedit.h
ch02/example24/: CMakeLists.txt  car.cpp  car.h  main.cpp
ch02/images/: figure22b.puml  figure23.puml  figure25.bkd  run-blockdiag3.sh
